--- a/book/templates/book/list_view.html
+++ b/book/templates/book/list_view.html
@@ -14,7 +14,7 @@
 
     }
 </style>
-<link rel="stylesheet" type="text/css" href="{% static 'book/css/list_view.css' %}"/>
+<link rel="stylesheet" type="text/css" href="{% static 'book/css/list_view.css' %}?20200417"/>
 {% endblock %}
 {% block content %}
 
