--- a/account/templates/account/edit.html
+++ b/account/templates/account/edit.html
@@ -2,6 +2,10 @@
 
 {% block title %}Edit your account{% endblock %}
 
+{% block css %}
+
+{% endblock %}
+
 {% block content %}
     <h1>Edit your account</h1>
     <p>You can edit your account using the following form:</p>
@@ -9,6 +13,10 @@
         {{ user_form.as_p }}
         {{ profile_form.as_p }}
         {% csrf_token %}
-        <p><input type="submit" value="Save changed"></p>
+        <p><input type="submit" value="Save changes"></p>
+        <p class="remove saved">Change saved</p>
+        {% if values_saved %}
+        <p>Saved values</p>
+        {% endif %}
     </form>
 {% endblock %}
