--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -5,6 +5,20 @@
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}"/>
+    {% block head %}
+    {% endblock %}
+
+    <style>
+         .hide {
+        visibility:hidden;
+    }
+    .remove {
+        visibility: hidden;
+        display: none;
+
+    }
+    </style>
+
 {% block css %}{% endblock %}
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous"></head>
 
@@ -15,16 +29,16 @@
         <span class="logo">BookClub</span>
         {% if request.user.is_authenticated %}
            
-                <li class="inline {% if section == 'dashboard' %}selected{% endif %}">
+                <li class="inline-top {% if section == 'dashboard' %}selected{% endif %}">
                     <a href="{% url 'account:dashboard' %}">My dashboard</a>
                 </li>
-                <li class="inline {% if section == 'images' %}selected{% endif %}">
+                <li class="inline-top {% if section == 'images' %}selected{% endif %}">
                     <a href="{% url 'book:all_books_view' %}">My books</a>
                 </li>
-                <li class="inline {% if section == 'people' %}selected{% endif %}">
+                <li class="inline-top {% if section == 'people' %}selected{% endif %}">
                     <a href="{% url 'club:club_selection' %}">My Clubs</a>
                 </li>
-                <li class="inline {% if section == 'profile' %}selected{% endif %}">
+                <li class="inline-top {% if section == 'profile' %}selected{% endif %}">
                     <a href="{% url 'account:edit' %}">My Profile</a>
                 </li>
             
