--- a/book/templates/book/all_books_showcase.html
+++ b/book/templates/book/all_books_showcase.html
@@ -12,7 +12,8 @@
 
     }
 </style>
-<link rel="stylesheet" type="text/css" href="{% static 'book/css/list_view.css' %}"/>
+<link rel="stylesheet" type="text/css" href="{% static 'book/css/list_view.css' %}?2020020"/>
+<link rel="stylesheet" type="text/css" href="{% static 'book/css/add_book.css' %}?20200202"/>
 
 {% endblock %}
 {% block  title %}My books{% endblock %}
