--- a/account/templates/account/dashboard.html
+++ b/account/templates/account/dashboard.html
@@ -17,10 +17,12 @@
     </ul>
     
     <div class="tab-panel active" id="groups">
-        <iframe src="{% url 'club:list_view' %}" style="border: none;" width="1920" height="600" id="club-list-frame" name="club-list-frame"></iframe>
+        <iframe src="{% url 'club:list_view' %}" style="position: absolute; height: 100%; width: 100%; border: none"
+                id="club-list-frame" name="club-list-frame"></iframe>
     </div>
     <div class="tab-panel" id="books">
-        <iframe src="{% url 'book:list_view' %}" style="border: none;" width="1920" height="600" id="book-list-frame" name="book-list-frame"></iframe>
+        <iframe src="{% url 'book:list_view' %}" style="position: absolute; height: 100%; width: 100%; border: none"
+                id="book-list-frame" name="book-list-frame"></iframe>
     </div>    
 
 {% endblock %}
