--- a/club/templates/club/create_group.html
+++ b/club/templates/club/create_group.html
@@ -69,7 +69,7 @@ function validateForm() {
         return false;
     }
     if (current_book_json == "" && type == "reading_club"){
-        alert("Please select a book");
+        alert("Please select a book123");
         return false;
     }
 }
