--- a/club/templates/club/selection_page.html
+++ b/club/templates/club/selection_page.html
@@ -53,7 +53,7 @@
     {% endfor %}
     </div>
 
-    <p>Reading club admin</p>
+    <p class="reading-header">Reading club admin</p>
 
     <div class="reading admin">
         {% for club in reading_clubs_admin %}
@@ -141,7 +141,7 @@
     {% endfor %}
     </div>
 
-    <p>Discussion club admin</p>
+    <p class="discussion-header">Discussion club admin</p>
     <div class="discussion admin">
         {% for club in discussion_clubs_admin %}
         <div class="club container discussion" id="container-4">
