--- a/account/static/account/css/tabs.css
+++ b/account/static/account/css/tabs.css
@@ -5,7 +5,6 @@
 .tab-panel.active {
     display:block;
     background-color: coral;
-    margin-left: 40px;
 
 }
 
@@ -33,3 +32,8 @@ li.tab:hover {
     background-color: grey;
     
 }
+
+ul.tab-list {
+    margin-left: 7px;
+    }
+
