--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -30,25 +30,33 @@
         {% if request.user.is_authenticated %}
            
                 <li class="inline-top {% if section == 'dashboard' %}selected{% endif %}">
-                    <a href="{% url 'account:dashboard' %}">My dashboard</a>
+                    <a href="{% url 'account:dashboard' %}" class="top-item">Dashboard</a>
                 </li>
                 <li class="inline-top {% if section == 'images' %}selected{% endif %}">
-                    <a href="{% url 'book:all_books_view' %}">My books</a>
+                    <a href="{% url 'book:all_books_view' %}" class="top-item">My books</a>
                 </li>
                 <li class="inline-top {% if section == 'people' %}selected{% endif %}">
-                    <a href="{% url 'club:club_selection' %}">My Clubs</a>
+                    <a href="{% url 'club:club_selection' %}" class="top-item">My Clubs</a>
                 </li>
                 <li class="inline-top {% if section == 'profile' %}selected{% endif %}">
-                    <a href="{% url 'account:edit' %}">My Profile</a>
+                    <a href="{% url 'account:edit' %}" class="top-item">My Profile</a>
                 </li>
-            
+
+        {% else %}
+            <li class="inline-top {% if section == 'dashboard' %}selected{% endif %}">
+                <a href="{% url 'account:dashboard' %}" class="top-item">Dashboard</a>
+            </li>
+            <li class="inline-top warning">
+                <span class="guest-warning">To properly use the page, please register or login</span>
+            </li>
+
         {% endif %}
         <span class="user">
             {% if request.user.is_authenticated %}
-                Hello {{ request.user }},
-                <a href="{% url 'account:logout' %}">Logout</a>
+                <a href="{% url 'account:logout' %}" class="account">Logout</a>
             {% else %}
-                <a href="{% url 'account:login' %}">Log-in</a>
+                <a href="{% url 'account:register' %}" class="account">Register</a>
+                <a href="{% url 'account:login' %}" class="account">Log-in</a>
             {% endif %}
         </span>
     </div>
