--- a/account/templates/registration/password_reset_form.html
+++ b/account/templates/registration/password_reset_form.html
@@ -1,10 +1,14 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block title %}Reset your password{% endblock %}
+{% block css %}
+<link rel="stylesheet" type="text/css" href="{% static 'account/css/register.css' %}" /> 
+{% endblock %}
 
 {% block content %}
-    <h1>Forgotten your password?</h1>
-    <p>Enter your e-mail address to obtain a new password.</p>
+    <h1 class="help-text">Forgotten your password?</h1>
+    <p class="help-text">Enter your e-mail address to obtain a new password.</p>
     <form action="." method="post">
         {{ form.as_p }}
         <p><input type="submit" value="Send e-mail"></p>
