--- a/book/templates/book/all_books_showcase.html
+++ b/book/templates/book/all_books_showcase.html
@@ -14,14 +14,15 @@
 </style>
 <link rel="stylesheet" type="text/css" href="{% static 'book/css/list_view.css' %}?2020020"/>
 <link rel="stylesheet" type="text/css" href="{% static 'book/css/add_book.css' %}?20200202"/>
+<link rel="stylesheet" type="text/css" href="{% static 'book/css/showcase.css' %}?20200204"/>
 
 {% endblock %}
 {% block  title %}My books{% endblock %}
 
 {% block content %}
     <form id="search-field" action="#">
-        <label for="search">Add:</label>
-        <input type="text" id="search" name="book-search" placeholder="Title"/>
+        <label for="search">Add book:</label>
+        <input type="text" id="search" name="book-search" placeholder="Book title"/>
         <button id="button" type="button">Search</button>
     </form>
     <div id="results"></div>
@@ -37,7 +38,7 @@
         </tbody>
         </table>
 
-    <p>Finished books:</p>
+    <p class="book-section-header">Finished books:</p>
     <ul class="all-books" id="finished-books-list">
     {% for book in read_books %}
         <div class="container" id="container">
@@ -93,7 +94,7 @@
 
 
     <br />
-    <p>Current books:</p>
+    <p class="book-section-header">Current books:</p>
     <ul class="all-books" id="current-books-list">
     {% for book in current_books %}
         <div class="container" id="container-2">
@@ -150,7 +151,7 @@
     </ul>
 
     <br />
-    <p>Want to read books:</p>
+    <p class="book-section-header">Want to read books:</p>
     <ul class="all-books" id="want-to-read-books-list">
     {% for book in want_to_read_books %}
         <div class="container" id="container-3">
