--- a/club/static/club/css/reading_club_detail.css
+++ b/club/static/club/css/reading_club_detail.css
@@ -94,6 +94,7 @@ ul.book-info {
     margin-left: 10p;
     margin-right: 10px;
     width: 45%;
+    height: 257px;
     background-color: yellowgreen;
 }
 
@@ -207,6 +208,11 @@ div.comment {
     border-bottom: rgba(128, 128, 128, 0.5) solid;
     border-bottom-width: 1px;
     margin-top: 10px;
+}
+
+h4 {
+    display: block;
+    margin-top: 70px
 }
 
 
