--- a/club/templates/club/list_view.html
+++ b/club/templates/club/list_view.html
@@ -4,12 +4,18 @@
 {% block title %}All clubs{% endblock %}
 {% block content %}
 {% block css %}
-<link rel="stylesheet" type="text/css" href="{% static 'club/css/list_view.css' %}?20200417"/>
+<link rel="stylesheet" type="text/css" href="{% static 'club/css/list_view.css' %}?20200318"/>
+
+<style>
+    ul.inner-ul {
+        float: left;
+    }
+</style>
 {% endblock %}
 
 
 <div class="add-club">
-    <a href="{% url 'club:create_group'%}">Add Group</a>
+    <a href="{% url 'club:create_group'%}" class="clean-link">Add Group</a>
 </div>
 
 <ul class="all-clubs">
